# ff_vreid

./: .gitignore
src/: CMakeLists.txt
src/common/: CMakeLists.txt  common.cpp  common.h  jpg_codec.cpp  pull_jpg2ram.cpp
src/vreid/: CMakeLists.txt  TH_PlateID.h  lpr_alg.cpp  lpr_alg.h  vreid.cpp
